[package]
name = "syntree_layout"
version = "0.3.0"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "A library to visualize trees from the 'syntree' crate."
documentation = "https://docs.rs/syntree_layout"
repository = "https://github.com/jsinger67/syntree_layout"
readme = "README.md"
keywords = ["syntree", "layout", "visualization", "embedding"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
syntree = "0.14"
thiserror = "1.0"
xml_writer = "0.4"
